--- a/Universal_Esir/UniversalEsir/Views/AppMain/AuxiliaryWindows/Statistic/InventoryStatus/AddEditItemWindow.xaml
+++ b/Universal_Esir/UniversalEsir/Views/AppMain/AuxiliaryWindows/Statistic/InventoryStatus/AddEditItemWindow.xaml
@@ -85,6 +85,12 @@
                        FontSize="24"
                        HorizontalAlignment="Right"
                        Margin="0 5"/>
+                        <Label Height="40"
+                       Foreground="Black"
+                       Content="Konobar artikal:"
+                       FontSize="24"
+                       HorizontalAlignment="Right"
+                       Margin="0 5"/>
                     </StackPanel>
                     <StackPanel Orientation="Vertical">
                         <ComboBox Height="40"
@@ -160,6 +166,47 @@
                              VerticalContentAlignment="Center"
                              Margin="0 5"
                              Text="{Binding CurrentInventoryStatus.Alarm, Mode=TwoWay}"/>
+                        <CheckBox IsChecked="{Binding CurrentInventoryStatus.Item.IsKonobar}"
+                                  Foreground="Black"
+                                  HorizontalAlignment="Left"
+                                  Margin="0 5">
+                            <CheckBox.Style>
+                                <Style TargetType="CheckBox">
+                                    <Setter Property="FontSize" Value="24"/>
+                                    <Setter Property="Height" Value="40"/>
+                                    <Setter Property="Width" Value="40"/>
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="CheckBox">
+                                                <Grid Width="40" Height="40">
+                                                    <Rectangle Name="box"
+                                                               Width="40"
+                                                               Height="40"
+                                                               Stroke="Black"
+                                                               StrokeThickness="1"
+                                                               Fill="White"/>
+                                                    <Path Name="checkMark"
+                                                          Data="M 0 0 L 10 10 M 10 0 L 0 10"
+                                                          Stroke="Black"
+                                                          StrokeThickness="2"
+                                                          Visibility="Collapsed"
+                                                          HorizontalAlignment="Center"
+                                                          VerticalAlignment="Center"/>
+                                                </Grid>
+                                                <ControlTemplate.Triggers>
+                                                    <Trigger Property="IsChecked" Value="True">
+                                                        <Setter TargetName="checkMark" Property="Visibility" Value="Visible"/>
+                                                    </Trigger>
+                                                    <Trigger Property="IsChecked" Value="False">
+                                                        <Setter TargetName="checkMark" Property="Visibility" Value="Collapsed"/>
+                                                    </Trigger>
+                                                </ControlTemplate.Triggers>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </CheckBox.Style>
+                        </CheckBox>
                     </StackPanel>
                 </StackPanel>
 
